Update Jet and S4 env files for mpmd_opt
- Make matching changes to Jet and S4 env files to set mpmd_opt
and use it in launcher commands in place of prior mpmd variable.

Refs #1060

--- a/env/JET.env
+++ b/env/JET.env
@@ -20,6 +20,7 @@ elif [[ "$PARTITION_BATCH" = "vjet" ]]; then
   export npe_node_max=16
 fi
 export launcher="srun -l --export=ALL"
+export mpmd_opt="--multi-prog"
 
 # Configure STACK
 export OMP_STACKSIZE=2048000
@@ -43,7 +44,7 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
 
     if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
-    export wave_mpmd=${mpmd}
+    export wave_mpmd=${mpmd_opt}
 
 elif [ $step = "atmanalrun" ]; then
 
