Rename mpmd to mpmd_opt in WCOSS2 env file
Refs #1060

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -17,7 +17,7 @@ step=$1
 
 # WCOSS2 information
 export launcher="mpiexec -l"
-export mpmd="--cpu-bind verbose,core cfp"
+export mpmd_opt="--cpu-bind verbose,core cfp"
 
 export npe_node_max=128
 
@@ -37,13 +37,13 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
 
     if [ $step = "waveprep" -a $CDUMP = "gfs" ]; then NTASKS=$NTASKS_gfs ; fi
     export wavempexec="$launcher -np"
-    export wave_mpmd=${mpmd}
+    export wave_mpmd=${mpmd_opt}
 
 elif [ $step = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -np \$ncmd $mpmd"
+    export APRUNCFP="$launcher -np \$ncmd ${mpmd_opt}"
 
     nth_max=$(($npe_node_max / $npe_node_atmanalrun))
 
@@ -55,7 +55,7 @@ elif [ $step = "atmensanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -np \$ncmd $mpmd"
+    export APRUNCFP="$launcher -np \$ncmd ${mpmd_opt}"
 
     nth_max=$(($npe_node_max / $npe_node_atmensanalrun))
 
@@ -65,7 +65,7 @@ elif [ $step = "atmensanalrun" ]; then
 
 elif [ $step = "aeroanlrun" ]; then
 
-    export APRUNCFP="$launcher -np \$ncmd $mpmd"
+    export APRUNCFP="$launcher -np \$ncmd ${mpmd_opt}"
 
     nth_max=$(($npe_node_max / $npe_node_aeroanlrun))
 
@@ -108,7 +108,7 @@ elif [ $step = "anal" -o $step = "analcalc" ]; then
 
     export CFP_MP=${CFP_MP:-"NO"}
     export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -np \$ncmd $mpmd"
+    export APRUNCFP="$launcher -np \$ncmd ${mpmd_opt}"
 
 elif [ $step = "sfcanl" ]; then
 
@@ -138,7 +138,7 @@ elif [ $step = "gldas" ]; then
     # periods being processed.
     export USE_CFP=${USE_CFP:-"YES"}
     npe_gldas_data_proc=$(($gldas_spinup_hours + 12))
-    export APRUN_GLDAS_DATA_PROC="$launcher -np $npe_gldas_data_proc $mpmd"
+    export APRUN_GLDAS_DATA_PROC="$launcher -np $npe_gldas_data_proc ${mpmd_opt}"
 
 elif [ $step = "eobs" ]; then
 
@@ -154,7 +154,7 @@ elif [ $step = "eobs" ]; then
 
     export CFP_MP=${CFP_MP:-"NO"}
     export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -np \$ncmd $mpmd"
+    export APRUNCFP="$launcher -np \$ncmd ${mpmd_opt}"
 
 elif [ $step = "eupd" ]; then
 
@@ -171,7 +171,7 @@ elif [ $step = "eupd" ]; then
 
     export CFP_MP=${CFP_MP:-"NO"}
     export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -np \$ncmd $mpmd"
+    export APRUNCFP="$launcher -np \$ncmd ${mpmd_opt}"
 
 elif [ $step = "fcst" ]; then
 
@@ -231,7 +231,7 @@ elif [ $step = "post" ]; then
 
     export NTHREADS_DWN=${nth_dwn:-1}
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
-    export APRUN_DWN="$launcher -np $npe_dwn $mpmd"
+    export APRUN_DWN="$launcher -np $npe_dwn ${mpmd_opt}"
 
 elif [ $step = "ecen" ]; then
 
@@ -290,7 +290,7 @@ elif [ $step = "postsnd" ]; then
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
-    export APRUN_POSTSNDCFP="$launcher -np $npe_postsndcfp $mpmd"
+    export APRUN_POSTSNDCFP="$launcher -np $npe_postsndcfp ${mpmd_opt}"
 
 elif [ $step = "awips" ]; then
 
@@ -298,7 +298,7 @@ elif [ $step = "awips" ]; then
 
     export NTHREADS_AWIPS=${nth_awips:-2}
     [[ $NTHREADS_AWIPS -gt $nth_max ]] && export NTHREADS_AWIPS=$nth_max
-    export APRUN_AWIPSCFP="$launcher -np $npe_awips $mpmd"
+    export APRUN_AWIPSCFP="$launcher -np $npe_awips ${mpmd_opt}"
 
 elif [ $step = "gempak" ]; then
 
@@ -306,7 +306,7 @@ elif [ $step = "gempak" ]; then
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
     [[ $NTHREADS_GEMPAK -gt $nth_max ]] && export NTHREADS_GEMPAK=$nth_max
-    export APRUN_GEMPAKCFP="$launcher -np $npe_gempak $mpmd"
+    export APRUN_GEMPAKCFP="$launcher -np $npe_gempak ${mpmd_opt}"
 
 elif [ $step = "waveawipsbulls" ]; then
 
