--- a/env/CONTAINER.env
+++ b/env/CONTAINER.env
@@ -28,13 +28,12 @@ export MP_STDOUTMODE="ORDERED"
 export KMP_AFFINITY=scatter
 export OMP_STACKSIZE=2048000
 export NTHSTACK=1024000000
-#export LD_BIND_NOW=1
 
 ulimit -s unlimited
 ulimit -a
 
 
-if [ ${step} = "ocnanalrun" ]; then
+if [ "${step}" = "ocnanalrun" ]; then
     export NTHREADS_OCNANAL=1
     export APRUN_OCNANAL="${launcher} -n 2"
 fi
