Fix post sounding job
A few minor errors were blocking the sounding job from completing
successfully:
- CFP APRUN command was using incorrect number of PEs
- Updates were needed to run on Orion. Removed the machine-specific
code for Hera and Jet so it runs the same on all machines, while
refactoring it to use C-style loop.
- Bash base errors (see also #1195), which are now corrected, while
refactoring to use C-style loop.

Refs #1195
Fixes #1211

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -276,7 +276,7 @@ elif [[ "${step}" = "postsnd" ]]; then
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
-    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsnd} ${mpmd_opt}"
+    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsndcfp} ${mpmd_opt}"
 
 elif [[ "${step}" = "awips" ]]; then
 
