Use correct resources for GFS gempak
The GFS gempak job was using the GDAS settings instead of switching
to the GFS settings for `npe` and `npe_node`.

Fixes: #1213

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -293,7 +293,12 @@ elif [[ "${step}" = "awips" ]]; then
 elif [[ "${step}" = "gempak" ]]; then
 
     export CFP_MP="YES"
-    
+
+    if [[ ${CDUMP} == "gfs" ]]; then
+        npe_gempak=${npe_gempak_gfs}
+        npe_node_gempak=${npe_node_gempak_gfs}
+    fi
+
     nth_max=$((npe_node_max / npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
