--- a/env/ORION.env
+++ b/env/ORION.env
@@ -291,6 +291,11 @@ elif [[ "${step}" = "awips" ]]; then
 elif [[ "${step}" = "gempak" ]]; then
 
     export CFP_MP="YES"
+
+    if [[ ${CDUMP} == "gfs" ]]; then
+        npe_gempak=${npe_gempak_gfs}
+        npe_node_gempak=${npe_node_gempak_gfs}
+    fi
     
     nth_max=$((npe_node_max / npe_node_gempak))
 
