Add conditional for CFP CPU number in postsnd
The MPMD scripts on slurm machines need to be prefaced with the
processor rank(s) to be used, but PBS (WCOSS2) does not recognize
the ranks. Added the paradigm of other jobs of using `$CFP_MP` to
control whether rank numbers are added, then setting it to "YES"
on slurm machines.

Refs: #1211

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -270,6 +270,8 @@ elif [[ "${step}" = "init" ]]; then
 
 elif [[ "${step}" = "postsnd" ]]; then
 
+    export CFP_MP="YES"
+
     nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
