--- a/env/S4.env
+++ b/env/S4.env
@@ -270,6 +270,8 @@ elif [[ ${step} = "init" ]]; then
 
 elif [[ ${step} = "postsnd" ]]; then
 
+    export CFP_MP="YES"
+
     npe_node_postsnd=${npe_node_postsnd:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_postsnd))
 
