Add CFP_MP changes to env for gempak
These were meant to be part of 0d45879

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -290,6 +290,8 @@ elif [[ "${step}" = "awips" ]]; then
 
 elif [[ "${step}" = "gempak" ]]; then
 
+    export CFP_MP="YES"
+    
     nth_max=$((npe_node_max / npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
