--- a/.github/workflows/pytests.yaml
+++ b/.github/workflows/pytests.yaml
@@ -6,12 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     name: Install pygw and run tests with pytests
     strategy:
+      max-parallel: 1
       matrix:
         python: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
 
