--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
     - name: Setup Python
-    - uses: actions/setup-python@v4
+      uses: actions/setup-python@v4
       with:
         python-version: "3.9"
 
