--- a/env/HERA.env
+++ b/env/HERA.env
@@ -5,7 +5,7 @@ if [[ $# -ne 1 ]]; then
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
     echo "atmanalrun atmensanalrun"
-    echo "aeroanlrun"
+    echo "aeroanlrun landanlrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -82,6 +82,16 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     export NTHREADS_AEROANL=${nth_aeroanlrun:-${nth_max}}
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
+
+elif [[ "${step}" = "landanlrun" ]]; then
+
+    export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
+
+    nth_max=$((npe_node_max / npe_node_landanlrun))
+
+    export NTHREADS_LANDANL=${nth_landanlrun:-${nth_max}}
+    [[ ${NTHREADS_LANDANL} -gt ${nth_max} ]] && export NTHREADS_LANDANL=${nth_max}
+    export APRUN_LANDANL="${launcher} -n ${npe_landanlrun}"
 
 elif [ ${step} = "ocnanalrun" ]; then
 
@@ -270,8 +280,6 @@ elif [[ "${step}" = "init" ]]; then
 
 elif [[ "${step}" = "postsnd" ]]; then
 
-    export CFP_MP="YES"
-
     nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
@@ -280,7 +288,7 @@ elif [[ "${step}" = "postsnd" ]]; then
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
-    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsndcfp} ${mpmd_opt}"
+    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsnd} ${mpmd_opt}"
 
 elif [[ "${step}" = "awips" ]]; then
 
@@ -291,13 +299,6 @@ elif [[ "${step}" = "awips" ]]; then
     export APRUN_AWIPSCFP="${launcher} -n ${npe_awips} ${mpmd_opt}"
 
 elif [[ "${step}" = "gempak" ]]; then
-
-    export CFP_MP="YES"
-
-    if [[ ${CDUMP} == "gfs" ]]; then
-        npe_gempak=${npe_gempak_gfs}
-        npe_node_gempak=${npe_node_gempak_gfs}
-    fi
 
     nth_max=$((npe_node_max / npe_node_gempak))
 
