--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -36,29 +36,29 @@ jobs:
           name: Differential ShellCheck SARIF
           path: ${{ steps.ShellCheck.outputs.sarif }}
 
-  lint-python:
-    runs-on: ubuntu-latest
+  # lint-python:
+  #   runs-on: ubuntu-latest
 
-    permissions:
-      security-events: write
+  #   permissions:
+  #     security-events: write
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - id: VCS_Diff_Lint
-        name: Lint python scripts
-        uses: fedora-copr/vcs-diff-lint-action@v1
+  #     - id: VCS_Diff_Lint
+  #       name: Lint python scripts
+  #       uses: fedora-copr/vcs-diff-lint-action@v1
 
-      - if: ${{ always() }}
-        name: Upload artifact with detected defects in SARIF format
-        uses: actions/upload-artifact@v3
-        with:
-          name: VCS Diff Lint SARIF
-          path: ${{ steps.VCS_Diff_Lint.outputs.sarif }}
+  #     - if: ${{ always() }}
+  #       name: Upload artifact with detected defects in SARIF format
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: VCS Diff Lint SARIF
+  #         path: ${{ steps.VCS_Diff_Lint.outputs.sarif }}
 
-      - if: ${{ failure() }}
-        name: Upload SARIF to GitHub using github/codeql-action/upload-sarif
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: ${{ steps.VCS_Diff_Lint.outputs.sarif }}
+  #     - if: ${{ failure() }}
+  #       name: Upload SARIF to GitHub using github/codeql-action/upload-sarif
+  #       uses: github/codeql-action/upload-sarif@v2
+  #       with:
+  #         sarif_file: ${{ steps.VCS_Diff_Lint.outputs.sarif }}
