--- a/Externals.cfg
+++ b/Externals.cfg
@@ -15,9 +15,11 @@ protocol = git
 required = True
 
 [UFS-Utils]
-hash = 8b990c0
+#hash = 8b990c0
+hash = feature/cycle_noahmp
 local_path = sorc/ufs_utils.fd
-repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
+#repo_url = https://github.com/ufs-community/UFS_UTILS.git
+repo_url = https://github.com/GeorgeGayno-NOAA/UFS_UTILS.git
 protocol = git
 required = True
 
