--- a/env/HERA.env
+++ b/env/HERA.env
@@ -5,7 +5,7 @@ if [[ $# -ne 1 ]]; then
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
     echo "atmanalrun atmensanalrun"
-    echo "aeroanlrun"
+    echo "atmanlrun aeroanlrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -72,6 +72,16 @@ elif [[ "${step}" = "atmensanalrun" ]]; then
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="${launcher} -n ${npe_atmensanalrun}"
+
+elif [[ "${step}" = "atmanlrun" ]]; then
+
+    export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
+
+    nth_max=$((npe_node_max / npe_node_atmanlrun))
+
+    export NTHREADS_ATMANL=${nth_atmanlrun:-${nth_max}}
+    [[ ${NTHREADS_ATMANL} -gt ${nth_max} ]] && export NTHREADS_ATMANL=${nth_max}
+    export APRUN_ATMANL="${launcher} -n ${npe_atmanlrun}"
 
 elif [[ "${step}" = "aeroanlrun" ]]; then
 
