--- a/parm/parm_gdas/land_jedi_fix.yaml
+++ b/parm/parm_gdas/land_jedi_fix.yaml
@@ -8,4 +8,4 @@ copy:
 - - !ENV ${FV3JEDI_FIX}/fv3jedi/fv3files/field_table_gfdl
   - !ENV ${DATA}/fv3jedi/field_table
 - - !ENV ${FV3JEDI_FIX}/fv3jedi/fieldmetadata/gfs-land.yaml
-  - !ENV ${DATA}/fv3jedi/gfs-restart.yaml
+  - !ENV ${DATA}/fv3jedi/gfs-land.yaml
