--- a/env/ORION.env
+++ b/env/ORION.env
@@ -5,7 +5,7 @@ if [[ $# -ne 1 ]]; then
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
     echo "atmanalrun atmensanalrun"
-    echo "aeroanlrun"
+    echo "aeroanlrun landanlrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -82,6 +82,16 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     export NTHREADS_AEROANL=${nth_aeroanlrun:-${nth_max}}
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
+
+elif [[ "${step}" = "landanlrun" ]]; then
+
+    export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
+
+    nth_max=$((npe_node_max / npe_node_landanlrun))
+
+    export NTHREADS_LANDANL=${nth_landanlrun:-${nth_max}}
+    [[ ${NTHREADS_LANDANL} -gt ${nth_max} ]] && export NTHREADS_LANDANL=${nth_max}
+    export APRUN_LANDANL="${launcher} -n ${npe_landanlrun}"
 
 elif [[ "${step}" = "ocnanalbmat" ]]; then
 
@@ -306,7 +316,7 @@ elif [[ "${step}" = "gempak" ]]; then
         npe_gempak=${npe_gempak_gfs}
         npe_node_gempak=${npe_node_gempak_gfs}
     fi
-    
+
     nth_max=$((npe_node_max / npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
